--- a/style.css
+++ b/style.css
@@ -576,6 +576,20 @@ border: 2px solid #fff;
         font-size: 50%;
     }
 
+    
+    
+    .pro-content{
+        padding: 30px;
+    }
+    .pro-title{
+        font-size: 30px;
+        margin: 0;
+        margin-top: -60px;
+        text-transform: capitalize;
+        text-align: center;
+        font-weight: 300;
+    }
+
  }
 
 @media (max-width:400px){
@@ -602,6 +616,17 @@ border: 2px solid #fff;
 
     .contact .row form{
         margin:3rem 0;
+    }
+
+    
+    
+    .pro-content{
+        padding: 15px;
+        top: 0%;
+    }
+    .pro-title{
+        font-size: 23px;
+        margin-top: -20px;
     }
 
 
