--- a/style.css
+++ b/style.css
@@ -633,5 +633,45 @@ border: 2px solid #fff;
  }
 
 
+ @media (max-width:340px){
+
+
+.pro-content{
+    position: relative;
+    padding: 8px;
+}
+.pro-title{
+    font-size: 22px;
+    margin: 0;
+    margin-top: -15px;
+    font-weight: 300;
+}
+.pro-info{
+    /* margin: 6rem; */
+    font-size: 1.3rem;
+
+    margin-top: 1.5rem;
+    line-height: 19px;
+
+}
+
+.pro-btn-grp{
+    margin-top: 3rem;
+    /*  display: flex;
+    justify-content: space-around; */
+    /* display: grid;
+   grid-template-columns: repeat(2,1fr);
+   grid-gap: 5%; */
+
+}
+
+ }
+
+
+
+
+
+
+
 
 
