--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ html::-webkit-scrollbar-thumb{
     --bg-color:#e6e6e6;
     --222:#777;
     --111:#e6e6e6;
-    --1a1a1a:#f95d24;
+    --1a1a1a:#77777791;
     --eee:#111;
     --3333:#eee;
     --fff4:#333;
