--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ html::-webkit-scrollbar-thumb{
     --light-color:#111;
     --bg-color:#e6e6e6;
     --222:#777;
-    --111:#e6e6e6;
+    --111:#orange;
     --1a1a1a:#77777791;
     --eee:#111;
     --3333:#eee;
