--- a/style.css
+++ b/style.css
@@ -59,8 +59,8 @@ html::-webkit-scrollbar-thumb{
     --light-color:#111;
     --bg-color:#e6e6e6;
     --222:#777;
-    --111:#1a1a1a;
-    --1a1a1a:#77777791;
+    --111:#white;
+    --1a1a1a:#orange;
     --eee:#111;
     --3333:#eee;
     --fff4:#333;
