--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ html::-webkit-scrollbar-thumb{
     --bg-color:#e6e6e6;
     --222:#777;
     --111:#white;
-    --1a1a1a:#orange;
+    --1a1a1a:#777777;
     --eee:#111;
     --3333:#eee;
     --fff4:#333;
